# rss-rs

./: Cargo.toml  urls.txt  urls2
src/: channel.rs  item.rs  lib.rs  main.rs  my_error.rs
