[package]
name = "rss_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
reqwest = {version="0.12.4", features = ["json"]}
roxmltree = "0.19.0"
tokio = {version="1.37.0",features=["full"]}
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
poll-promise = "0.3.0"
